# puffy

./: CMakeLists.txt  README.md  compile_flags.txt
docs/: index.html
generate_mask_python/: generate_mask.py  main.py
src/: CMakeLists.txt  main.cpp  svg_shape.cpp  svg_shape.h  viewer.cpp  viewer.h
